--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "better-scroll": "^2.0.5",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuescroll": "^4.16.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
